2017-08-25  Charlie Zender  <zender@uci.edu>

	* Add --lst_xtr stubs to ncclimo to expand var_lst rx

	* Add ncks --lst_xtr to print extraction list for ncremap and ncclimo

	* ncremap/ncclimo correct ERWG location for module load ncl/6.3.0 on rhea

	* Use appropriate fl_out_fmt to print ncgen hint in CDL

2017-08-24  Charlie Zender  <zender@uci.edu>

	* Add/clarify syntax to some regridder HINTs

	* Put MD5 in operator self-help for ncks

2017-08-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha02 final changes';git push
	git tag -a 4.6.9-alpha02 -m 'support CDF5 autoconversion in ncks;CDF5 in all operators';git push --tags

2017-08-22  Charlie Zender  <zender@uci.edu>

	* Implement auto-conversion for CDF5 destination files

2017-08-20  Charlie Zender  <zender@uci.edu>

	* Skip autoconversion of atomic types to CDF5 destination files

	* Add explicitly supported suffixes .nc5, .nc6, .nc7 to ncclimo, nco.texi, ncecat.c

	* Fix getopt() --64bit_offset code path

	* Implement CDF5 choices in getopt() for all operators

2017-08-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha01 final changes';git push
	git tag -a 4.6.9-alpha01 -m 'default print CDL, ANN false-positive, edison module udunits2';git push --tags

	* Add --trd where needed in regression tests

	* Change default printing from TRD to CDL

2017-08-17  Charlie Zender  <zender@uci.edu>

	* Replace ACME by E3SM or ACME/E3SM as appropriate

2017-08-16  Charlie Zender  <zender@uci.edu>

	* Fix ncclimo false-positive warning about ANN

	* ncclimo on edison now loads module udunits2 not udunits

	* NCO 4.6.8 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.8 final changes';git push
	git tag -a 4.6.8 -m 'ncap2 cnk, ncks dt_fmt, seasons, msk=none,	ncwa_hyp_msk_wgt bug';git push --tags

2017-08-15  Charlie Zender  <zender@uci.edu>
