@@ -1,3 +1,8 @@
+2017-08-29  Charlie Zender  <zender@uci.edu>
+
+	* ncclimo fix --lst_xtr to exclude bounds coordinates so, e.g., time_bnds not explicitly
+	passed to seasonal climos that have replaced it	with climatology_bounds
+
 2017-08-25  Charlie Zender  <zender@uci.edu>
 
 	* Add --lst_xtr stubs to ncclimo to expand var_lst rx
